@@ -1,4 +1,4 @@
-This is Python version 3.4.0 alpha 2
+This is Python version 3.4.0 alpha 3
 ====================================
 
 Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,
@@ -168,7 +168,7 @@ http://www.python.org/dev/peps/.
 Release Schedule
 ----------------
 
-See PEP 398 for release details: http://www.python.org/dev/peps/pep-0398/
+See PEP 429 for release details: http://www.python.org/dev/peps/pep-0429/
 
 
 Copyright and License Information
