@@ -2,7 +2,11 @@
 Python News
 +++++++++++
 
-Projected Release date: 2013-09-29
+What's New in Python 3.4.0 Alpha 3?
+===================================
+
+Release date: 2013-09-29
+
 
 Core and Builtins
 -----------------
